<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/moradito"
    android:gravity="center_horizontal">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/moradito"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginLogAct"
        android:textSize="120sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/cookie_regular"

        />
    <!--    <ImageView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="100dp"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        app:srcCompat="@drawable/mini_logo"-->
    <!--        />-->
    <EditText
        android:id="@+id/usernameET"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:hint="@string/username"
        android:layout_gravity="center"
        android:background="@color/white"
        android:layout_marginTop="20dp"

        />
    <EditText
        android:id="@+id/passwordET"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/password"/>
    <Button
        android:id="@+id/buttonLoginAct"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:background="@color/backgroundPrimary"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registered"/>
        <TextView
            android:id="@+id/registerLoginAct"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/register"/>
    </LinearLayout>



</LinearLayout>
</ScrollView>