<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/moradito">

<!--    tools:context=".MainActivity"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:background="@color/moradito"
        >
        <!--Created a nice title with cookie font-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hey_there"
        android:textSize="95sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/cookie_regular"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ready_for_adventures"
        android:textStyle="bold"
        android:textFontWeight="400"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        />

        <!--Created 2 buttons so the user picks either to login or register-->
    <Button
        android:id="@+id/login"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        />

    <Button
        android:id="@+id/registerMain"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/registerMain"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:background="@color/white"/>


</LinearLayout>
</ScrollView>
