<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/moradito"
    android:gravity="center_horizontal">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="280dp">
    <LinearLayout
        android:background="@drawable/gradientbackground"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="140dp"
            android:layout_marginTop="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="150dp"
            android:src="@drawable/profile_welcome"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/dear_user"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="30sp"/>

    </LinearLayout>


    </RelativeLayout>
    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="45dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_baseline_email_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/user_gmail_com"
                android:gravity="center_vertical"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingLeft="25dp">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_baseline_group_add_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/add_to_group"
                android:gravity="center_vertical"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingLeft="25dp">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_baseline_forum_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/start_forum"
                android:gravity="center_vertical" />

        </LinearLayout>
    </LinearLayout>



</LinearLayout>
</ScrollView>